--- a/HTML/Chaqueta.html
+++ b/HTML/Chaqueta.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../CSS/Diseño.css">
 </head>
-<body class="Fondo">
+<body >
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="Rectan2">
-        <img class="d-block w-100" src="../Imagenes/Blusa.jpg" alt="First slide" >
+        <img class="d-block w-100" src="../Imagenes/Chaqueta.jpg" alt="First slide" >
       <div class="container">
         <table class="table table-striped">
             <thead>
