--- a/HTML/Pantalon.html
+++ b/HTML/Pantalon.html
@@ -16,7 +16,7 @@
     <div class="jumbotron jumbotron-fluid">
         <a style="float: right;font-size: 20px;" href="../HTML/Index.html">Inicio</a>
         <div class="container">
-          <h1 style="text-align: center;">Blusa</h1>
+          <h1 style="text-align: center;">Pantalón</h1>
           <img id="logo" src="../Imagenes/Cuello Gris.png">   
           
         </div>
